# libmanette

./: .editorconfig  .gitattributes  .gitlab-ci.yml  CONTRIBUTING.md  HACKING.md  NEWS  README.md  doc.sh  index.html  libmanette.doap  meson.build  meson_options.txt  style.css
demo/: manette-demo-axis-bar.c  manette-demo-axis-bar.h  manette-demo-window.c  manette-demo-window.h  manette-demo-window.ui  manette-demo.c  manette-demo.gresources.xml  meson.build  org.gnome.Manette1.Demo.json  style-hc.css  style.css
demos/: meson.build
demos/manette-test/: manette-test.c  meson.build  org.gnome.Manette.Test.json
doc/: index.html  libmanette.toml.in  manette-doc.xml  meson.build  urlmap.js
doc/xml/: meson.build
src/: .manette-device.c.swp  gamecontrollerdb  gamecontrollerlayoutdb  libmanette.gresource.xml  libmanette.h  manette-backend-private.h  manette-backend.c  manette-device-private.h  manette-device-type-private.h  manette-device-type.c  manette-device-type.h  manette-device.c  manette-device.h  manette-evdev-backend-private.h  manette-evdev-backend.c  manette-event-mapping-private.h  manette-event-mapping.c  manette-event-private.h  manette-event.c  manette-event.h  manette-hid-backend-private.h  manette-hid-backend.c  manette-hid-driver-private.h  manette-hid-driver.c  manette-inputs.c  manette-inputs.h  manette-mapping-error-private.h  manette-mapping-error.c  manette-mapping-error.h  manette-mapping-manager-private.h  manette-mapping-manager.c  manette-mapping-manager.h  manette-mapping-private.h  manette-mapping.c  manette-mapping.h  manette-monitor-iter-private.h  manette-monitor-iter.c  manette-monitor-iter.h  manette-monitor.c  manette-monitor.h  (+3 more)
src/drivers/: manette-steam-deck-driver-private.h  manette-steam-deck-driver.c
tests/: meson.build  test-event-mapping.c  test-mapping-manager.c  test-mapping.c
tools/: check-api-visibility.sh  update-gamecontrollerdb.sh
