# Documentation and introspection
option('introspection', type: 'boolean', value: 'true',
  description : 'Build introspection data (requires gobject-introspection)')
option('vapi', type: 'boolean', value: 'true',
  description : 'Build Vala bindings (requires vapigen and introspection option)')

# Dependencies
option('gudev', type: 'feature', value: 'auto',
  description : 'Enable finding devices via udev')
